--- a/index.html
+++ b/index.html
@@ -6,75 +6,86 @@
   <title>Innovation Scout</title>
   <script defer data-domain="carlosmsal22.github.io/innovationscout" src="https://plausible.io/js/script.js"></script>
   <style>
-    <body>
-  <button class="toggle-btn" onclick="toggleMode()">Light/Dark</button>
-  <button class="lang-btn" onclick="toggleLang()">Español / English</button>
-  <h1 id="main-title">Innovation Scout - Prompt Menu</h1>
-  <div class="search-box">
-    <input type="text" id="searchInput" onkeyup="filterPrompts()" placeholder="Search prompts...">
-  </div>
-  <div class="filters" id="categoryFilters"></div>
-  <div class="grid" id="promptGrid"></div>
-
-  <!-- Chat Launcher -->
-  <div id="chat-launcher">
-    <button onclick="toggleChat()">💬 Ask Innovation Scout</button>
-  </div>
-
-  <!-- Chat Panel -->
-  <div id="chat-panel">
-    <div style="padding: 10px; border-bottom: 1px solid #eee;">
-      <strong>Innovation Scout</strong>
-      <button onclick="toggleChat()" style="float:right;">✖</button>
-    </div>
-    <div id="chat-response" style="padding: 10px; height: 200px; overflow-y: auto; font-size: 14px;"></div>
-    <div style="padding: 10px; border-top: 1px solid #eee;">
-      <input id="chat-input" type="text" placeholder="Write your question..." 
-             onkeypress="if(event.key==='Enter'){submitChat()}">
-    </div>
-  </div>
-
-  <script>
-    const API_URL = "https://innovation-scout-co.netlify.app/.netlify/functions/innovationScout";
-    let chatHistory = "";
-
-    function toggleChat() {
-      const panel = document.getElementById("chat-panel");
-      panel.style.display = panel.style.display === "block" ? "none" : "block";
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 2rem;
+      background: #0a2540;
+      color: white;
     }
-
-    async function submitChat() {
-      const input = document.getElementById("chat-input");
-      const responseBox = document.getElementById("chat-response");
-      const userMessage = input.value.trim();
-      if (!userMessage) return;
-
-      responseBox.innerHTML += `<div><strong>You:</strong> ${userMessage}</div>`;
-      responseBox.innerHTML += `<div id="loading"><em>⏳ Thinking...</em></div>`;
-      responseBox.scrollTop = responseBox.scrollHeight;
-      input.disabled = true;
-
-      try {
-        const res = await fetch(API_URL, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ prompt: userMessage })
-        });
-        const data = await res.json();
-        document.getElementById("loading").remove();
-        responseBox.innerHTML += `<div><strong>Scout:</strong> ${data.reply}</div>`;
-      } catch (err) {
-        document.getElementById("loading").remove();
-        responseBox.innerHTML += `<div style="color:red;">Error: ${err.message}</div>`;
-      }
-
-      input.value = "";
-      input.disabled = false;
-      responseBox.scrollTop = responseBox.scrollHeight;
+    .toggle-btn, .lang-btn {
+      position: fixed;
+      top: 1rem;
+      background-color: #fdb913;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 10px;
+      font-weight: bold;
+      cursor: pointer;
     }
-  </script>
+    .toggle-btn { right: 1rem; }
+    .lang-btn { right: 8rem; }
+    h1 {
+      text-align: center;
+      color: #00d4ff;
+    }
+    .search-box {
+      display: flex;
+      justify-content: center;
+      margin-top: 1rem;
+    }
+    .search-box input {
+      width: 60%;
+      padding: 0.6rem;
+      font-size: 1rem;
+      border-radius: 10px;
+      border: none;
+    }
+    .filters {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin-top: 1rem;
+      gap: 0.5rem;
+    }
+    .filter-btn {
+      background-color: #00d4ff;
+      color: #0a2540;
+      font-weight: bold;
+      border: none;
+      padding: 0.4rem 1rem;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      gap: 1.5rem;
+      margin-top: 2rem;
+    }
+    .card {
+      background: #1c2b45;
+      padding: 1rem;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      transition: transform 0.2s ease;
+    }
+    .card:hover { transform: translateY(-5px); }
+    .category {
+      font-weight: bold;
+      font-size: 1.1rem;
+      margin-bottom: 0.6rem;
+      color: #fdb913;
+    }
+    ul { list-style: none; padding-left: 1.2rem; }
+    li { margin-bottom: 0.4rem; }
+    a {
+      color: #00d4ff;
+      text-decoration: none;
+    }
+    a:hover { text-decoration: underline; }
 
-  <style>
+    /* Chat Button & Panel */
     #chat-launcher {
       position: fixed;
       bottom: 20px;
@@ -105,12 +116,10 @@
       font-family: sans-serif;
       color: #000;
     }
-    #chat-response div {
-      margin-bottom: 6px;
-      line-height: 1.4;
-    }
+    #chat-response div { margin-bottom: 6px; line-height: 1.4; }
   </style>
-</body>
+</head>
+<body>
   <button class="toggle-btn" onclick="toggleMode()">Modo Claro/Oscuro</button>
   <button class="lang-btn" onclick="toggleLang()">Español / English</button>
   <h1 id="main-title">Innovation Scout - Menú de Prompts</h1>
@@ -120,68 +129,68 @@
   <div class="filters" id="categoryFilters"></div>
   <div class="grid" id="promptGrid"></div>
 
-  <!-- New Chat Panel -->
+  <!-- Chat Launcher -->
   <div id="chat-launcher">
-    <button onclick="toggleChat()">Ask Innovation Scout</button>
+    <button onclick="toggleChat()">💬 Ask Innovation Scout</button>
   </div>
+
+  <!-- Chat Panel -->
   <div id="chat-panel">
     <div style="padding: 10px; border-bottom: 1px solid #eee;">
       <strong>Innovation Scout</strong>
-      <button onclick="toggleChat()">&#10005;</button>
+      <button onclick="toggleChat()" style="float:right;">✖</button>
     </div>
-    <div id="chat-response" style="padding: 10px; height: 160px; overflow-y: auto; font-size: 14px;"></div>
+    <div id="chat-response" style="padding: 10px; height: 200px; overflow-y: auto; font-size: 14px;"></div>
     <div style="padding: 10px; border-top: 1px solid #eee;">
-      <input id="chat-input" type="text" placeholder="Write your question..." onkeypress="if(event.key==='Enter'){submitChat()}">
+      <input id="chat-input" type="text" placeholder="Write your question..." 
+             onkeypress="if(event.key==='Enter'){submitChat()}">
     </div>
   </div>
-<script>
-const API_URL = "https://innovation-scout-co.netlify.app/.netlify/functions/innovationScout";
 
-function toggleChat() {
-  const panel = document.getElementById("chat-panel");
-  panel.style.display = panel.style.display === "none" ? "block" : "none";
-}
+  <script>
+    const API_URL = "https://innovation-scout-co.netlify.app/.netlify/functions/innovationScout";
 
-async function submitChat() {
-  const input = document.getElementById("chat-input");
-  const responseBox = document.getElementById("chat-response");
-  const userMessage = input.value.trim();
-  if (!userMessage) return;
+    function toggleChat() {
+      const panel = document.getElementById("chat-panel");
+      panel.style.display = panel.style.display === "block" ? "none" : "block";
+    }
 
-  const lang = detectLanguage(userMessage); // ⬅️ Language detection
+    async function submitChat() {
+      const input = document.getElementById("chat-input");
+      const responseBox = document.getElementById("chat-response");
+      const userMessage = input.value.trim();
+      if (!userMessage) return;
 
-  // Append user message
-  responseBox.innerHTML += `<div><strong>You:</strong> ${userMessage}</div>`;
-  responseBox.innerHTML += `<div id="loading"><em><img src="https://i.imgur.com/llF5iyg.gif" style="height:18px;vertical-align:middle;" alt="loading"> Thinking...</em></div>`;
-  responseBox.scrollTop = responseBox.scrollHeight;
+      const lang = detectLanguage(userMessage);
+      responseBox.innerHTML += `<div><strong>You:</strong> ${userMessage}</div>`;
+      responseBox.innerHTML += `<div id="loading"><em>⏳ Thinking...</em></div>`;
+      responseBox.scrollTop = responseBox.scrollHeight;
+      input.disabled = true;
 
-  input.disabled = true;
+      try {
+        const res = await fetch(API_URL, {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ prompt: userMessage, language: lang })
+        });
+        const data = await res.json();
+        document.getElementById("loading").remove();
+        responseBox.innerHTML += `<div><strong>Scout:</strong> ${data.reply}</div>`;
+      } catch (err) {
+        document.getElementById("loading").remove();
+        responseBox.innerHTML += `<div style="color:red;">Error: ${err.message}</div>`;
+      }
 
-  try {
-    const res = await fetch(API_URL, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ prompt: userMessage, language: lang })
-    });
+      input.value = "";
+      input.disabled = false;
+      responseBox.scrollTop = responseBox.scrollHeight;
+    }
 
-    const data = await res.json();
-    document.getElementById("loading").remove();
-    responseBox.innerHTML += `<div><strong>Scout:</strong> ${data.reply}</div>`;
-  } catch (err) {
-    document.getElementById("loading").remove();
-    responseBox.innerHTML += `<div style="color:red;">Error: ${err.message}</div>`;
-  }
-
-  input.value = "";
-  input.disabled = false;
-  responseBox.scrollTop = responseBox.scrollHeight;
-}
-
-function detectLanguage(text) {
-  const esPattern = /[¿¡áéíóúñ]/i;
-  const hasSpanish = esPattern.test(text) || /(?:que|los|para|una|cómo|dónde|cuál|necesidades|puntos|dolor)/i.test(text);
-  return hasSpanish ? "es" : "en";
-}
-</script>
+    function detectLanguage(text) {
+      const esPattern = /[¿¡áéíóúñ]/i;
+      const hasSpanish = esPattern.test(text) || /(?:que|los|para|una|cómo|dónde|cuál|necesidades|puntos|dolor)/i.test(text);
+      return hasSpanish ? "es" : "en";
+    }
+  </script>
 </body>
 </html>
